--- a/client/src/pages/Contact.css
+++ b/client/src/pages/Contact.css
@@ -48,6 +48,6 @@
 }
  .container {
      border-radius: 5px;
-     background-color: #f2f2f2;
+     /* background-color: #f2f2f2; */
      padding: 20px;
 }
